# EECE667-TermProject-Placement

./: .gitignore  CMakeLists.txt  README.md  tool.env
doc/: GuideLine.md
include/algorithm/: FFT_calculator.h  matrixSolver.h
include/circuit/: Circuit.h
include/dataStructures/: Instance.h  Net.h  Pin.h  structures.h
src/: main_evalutor.cpp  main_placer.cpp  main_qPlacer.cpp
src/algorithm/: FFT_calculator.cpp  place.cpp
src/algorithm/math/: matrixSolver.cpp
src/circuit/: Circuit.cpp  Evaluator.cpp
src/dataStructures/: Instance.cpp  Net.cpp  Pin.cpp
src/tools/: visualizer.cpp
test/competition/: test1.input.def
